--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "webpack-composer",
+  "name": "@cranejs/webpack-composer",
   "version": "0.0.1",
-  "description": "",
+  "description": "Webpack configuration composer",
   "main": "lib/index.js",
+  "types": "types/index.d.ts",
   "scripts": {
-    "test": "jest --watch",
-    "build": "tsc src/index.ts --outDir lib"
+    "test": "jest",
+    "dev": "jest --watch",
+    "report": "nyc npm run test && nyc report --reporter=text-lcov | coveralls",
+    "build": "tsc src/*.ts --outDir lib && tsc src/*.ts --declaration --emitDeclarationOnly --outDir types"
   },
   "repository": {
     "type": "git",
@@ -19,11 +22,53 @@
   "homepage": "https://github.com/joe223/webpack-composer#readme",
   "devDependencies": {
     "@types/node": "^14.14.22",
+    "coveralls": "^3.1.0",
     "debug": "^4.3.1",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
+    "nyc": "^15.1.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "webpack": "^5.16.0"
+  },
+  "nyc": {
+    "report-dir": "./coverage",
+    "reporter": [
+      "lcov",
+      "text-summary"
+    ],
+    "include": [
+      "**/*.js"
+    ],
+    "exclude": [
+      "__test__",
+      "node_modules",
+      "src/index.esm.js",
+      "src/index.full.js"
+    ],
+    "watermarks": {
+      "lines": [
+        70,
+        85
+      ],
+      "functions": [
+        70,
+        85
+      ],
+      "branches": [
+        70,
+        85
+      ],
+      "statements": [
+        70,
+        85
+      ]
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test"
+    }
   },
   "peerDependencies": {
     "webpack": "^5.0.0"
